--- a/farmdata2/farmdata2_modules/fd2_school/Vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue1/vue1.html
@@ -25,16 +25,13 @@
 
         <div>
         <label for="crops">Crop:</label>
-        <select v-model="crop" id="crops" name="crops">
-            <option>Kale</option>
-            <option>Peas</option>
-            <option>Broccoli</option>
-          </select>
+        <select v-model="crops" id="crops" name="crops">
+            <option v-for="crops in crops">{{ crops }}</option>
+        </select>
+        
         <label for="area">Area:</label>
-        <select id="area" name="area">
-            <option selected>All</option>
-            <option>Chuau-1</option>
-            <option>SQ7</option>
+        <select v-model="areas" id ="area" name="area">
+            <option v-for="area in areas">{{ area }}</option>
           </select>
         </div>
 
@@ -61,7 +58,7 @@
         <ul>
             <li><strong>Start:</strong> {{ startDate }}</li>
             <li><strong>End:</strong> {{ endDate }}</li>
-            <li><strong>Crop:</strong> {{ crop }}</li>
+            <li><strong>Crop:</strong> {{ crops }}</li>
             </ul>
 
         <div>
@@ -101,7 +98,8 @@
           title: "My Sample Harvest Report",
           startDate: "2020-05-05",
           endDate: "2020-05-15",
-          crop: "Kale"
+          crops: ["Kale", "Peas", "Broccoli"],
+          areas: ["All", "Chuau-1", "SQ7"]
       }
     })
   </script>
