--- a/farmdata2/farmdata2_modules/fd2_school/Vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue1/vue1.html
@@ -70,20 +70,13 @@
                   <th>Yield</th>
                   <th>Units</th>
                 </tr>
-                <tr>
-                  <td>05/02/2018</td>
-                  <td>Chuau-1</td>
-                  <td>Kale</td>
-                  <td>10</td>
-                  <td>Bunches</td>
-                </tr>
-                <tr>
-                    <td>05/05/2018</td>
-                    <td>SQ7</td>
-                    <td>Kale</td>
-                    <td>7</td>
-                    <td>Bunches</td>
-                  </tr>
+               <tr v-for="cell in cells"> 
+                <td>{{ cell.date }}</td> 
+                <td>{{ cell.area }}</td> 
+                <td>{{ cell.crop }}</td> 
+                <td>{{ cell.yield }}</td> 
+                <td>{{ cell.units }}</td> 
+              </tr>
               </table>
               
 
@@ -99,7 +92,11 @@
           startDate: "2020-05-05",
           endDate: "2020-05-15",
           crops: ["Kale", "Peas", "Broccoli"],
-          areas: ["All", "Chuau-1", "SQ7"]
+          areas: ["All", "Chuau-1", "SQ7"],
+          cells: [
+            {date: "2018-05-02", area: "Chuau-1", crop: "Kale", yield: 10, units: "Bunches"},
+            {date: "2018-05-05", area: "SQ7", crop: "Kale", yield: 7, units: "Bunches"}
+        ]
       }
     })
   </script>
