--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -1,6 +1,6 @@
 <h1>Harvest Report</h1>
 <p>This page is a <i>mockup</i> of a simplified harvest report</p>
-<div id = Vue1 v-cloak>
+<div id = Vue2 v-cloak>
     <label for="title">Title</label>
     <input type="text" v-model="rptTitle">
     <br><br>
@@ -23,7 +23,7 @@
     </select>
     
     <br><br>
-    <button type="button">Generate Report</button>
+    <button type="button" v-on:click='hstLogs.push({date:"2018-05-01", area:"Orion-3", crop:"Kale", yield:"12", units:"Bunches" })'>Generate Report</button>
     
     <hr>
     <h1>{{rptTitle==""? "Mock Harvest Report":rptTitle}}</h1>
@@ -61,8 +61,8 @@
 </div>
 
 <script>
-    var Vue1 = new Vue({
-        el:"#Vue1",
+    var Vue2 = new Vue({
+        el:"#Vue2",
         data: {
             rptTitle: "My Sample Harvest Report",
             rptStartDate: "2020-05-05",
@@ -71,11 +71,7 @@
             crops: ["Kale","Broccoli", "Peas"],
             rptField: "All",
             fields: ["All", "Chuau-1", "SQ7"],
-            hstLogs: [
-                {date: "2018-05-02", area:"Chuau-1", crop: "Kale", yield:10, units:"Bunches"},
-                {date: "2018-05-05", area:"SQ7", crop: "Kale", yield:7, units:"Bunches"},
-                {date: "2018-05-02", area:"Chuau-1", crop: "Peas", yield:20, units:"Bunches"},
-            ]
+            hstLogs: []
         }
     })
 
