--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -23,7 +23,7 @@
     </select>
     
     <br><br>
-    <button type="button" v-on:click='hstLogs.push({date:"2018-05-01", area:"Orion-3", crop:"Kale", yield:"12", units:"Bunches" })'>Generate Report</button>
+    <button type="button" v-on:click="savehstLogs">Generate Report</button>
     
     <hr>
     <h1>{{rptTitle==""? "Mock Harvest Report":rptTitle}}</h1>
@@ -72,6 +72,11 @@
             rptField: "All",
             fields: ["All", "Chuau-1", "SQ7"],
             hstLogs: []
+        },
+        methods: {
+            savehstLogs: function(){
+                this.hstLogs.push({date:"2018-05-01", area:"Orion-3", crop:"Kale", yield:"12", units:"Bunches" });
+            }
         }
     })
 
