--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -44,6 +44,7 @@
 
     <table border="1">
         <tr>
+            <th>Row</th>
             <th>Date</th>
             <th>Area</th>
             <th>Crop</th>
@@ -51,11 +52,12 @@
             <th>Units</th>
         </tr>
         <tr v-for="log in hstLogs">
+            <td>{{log.row}}</td>
             <td>{{log.date}}</td>
-            <th>{{log.area}}</th>
-            <th>{{log.crop}}</th>
-            <th>{{log.yield}}</th>
-            <th>{{log.units}}</th>
+            <td>{{log.area}}</td>
+            <td>{{log.crop}}</td>
+            <td>{{log.yield}}</td>
+            <td>{{log.units}}</td>
         </tr>
     </table>
 </div>
@@ -74,8 +76,9 @@
             hstLogs: []
         },
         methods: {
+            
             savehstLogs: function(){
-                this.hstLogs.push({date:"2018-05-01", area:"Orion-3", crop:"Kale", yield:"12", units:"Bunches" });
+                this.hstLogs.push({row:this.hstLogs.length + 1,date:"2018-05-01", area:"Orion-3", crop:"Kale", yield:"12", units:"Bunches"});
             }
         }
     })
