--- a/farmdata2/farmdata2_modules/fd2_school/Vue2/Vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue2/Vue2.html
@@ -47,11 +47,8 @@
                      selectedCrop: "kale",
                      crops: ["brocili", "kale", "peas"],
                      areas: ["all", "chuahu-1", "sq7"],
-                     harvestLogs: [
-                     {date: "2018-05-02", area:"sq7", crop:"kale", yield: 10, units:"Bunches"},
-                     {date: "2018-05-10", area:"chuahu-1", crop:"peas", yield: 10, units:"Bunches"},
-                    ],
-                 }
+                 },
+                 harvestLogs: [],
                 })
                 Vue.config.devtools = true;
             </script>
@@ -65,17 +62,9 @@
             <hr />
             <h1>My Sample Harvest:</h1>
             <p>Details:</p>
-                <ul>
-                    <li><b>Farm:</b>Sample Farm</li>
-                    <li><b>User:</b>manager1</li>
-                    <li><b>Language:</b>English</li><br>
-                    <li><b>Start:</b>05/01/2018</li>
-                    <li><b>End:</b>05/15/2018</li>
-                    <li><b>Crop:</b>Kale</li>
-                </ul>
                 <label for="title">Title:</label>
                 <input type="text" id="title" name="title" placeholder="Enter the title">
-                <button>Generate Report</button>
+                <button class="btn btn-primary" @click="harvestLogs.push({date:'2018-05-01', area: 'Orion-3', crop: 'Kale', yield: '12', units: 'Bunches'})">Generate Report</button>
                 <table border=1>
                     <tr>
                         <th>Date</th>
