--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -28,7 +28,7 @@
             </select>
             <br>
             <br>
-            <input type="button" value="Generate Report" />
+            <input type="button" value="Generate Report" v-on:click='reportLogs.push({date:"2018-05-01", area:"Orion-3", crop:"Kale", yield:"12",units:"Bunches"})'/>
             <hr>
             <h1>{{reportTitle==""?"Mock Harvest Report":reportTitle}}</h1> 
             <p>Details:</p>
@@ -68,8 +68,8 @@
                 reportCrop: "Kale",
                 crops:["Kale","Broccoli","Peas"],
                 areas:["All","Chuau-1","SQ7"],
-                reportLogs:[{date: "2018-05-02", area: "Chuau-1", crop: "Kale", yield: 10, units: "Bunches"},
-                {date: "2018-05-05", area: "SQ7", crop: "Kale", yield: 7, units: "Bunches"}],
+                newLog:{},
+                reportLogs:[],
             }
 
         });
