--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -1,5 +1,7 @@
 <h1>Harvest Report</h1>
 <p>This page is a <i>mockup</i> of a simplified harvest report.</p>
+<p>Title: <input type="text" id="comment" name="comment" size="21" value="My Sample Harvest Report" /></p>
+<button type="button">Generate Report</button>
 <hr />
 <h1>My Sample Harvest Report</h1>
 <p>Details: </p>
@@ -11,4 +13,8 @@
     <li><strong>End:</strong>05/15/2018</li>
     <li><strong>Crop:</strong>Kale</li>
 </ul>
+
+
+
+
 
