--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -1,6 +1,26 @@
 <h1>Harvest Report</h1>
 <p>This page is a <i>mockup</i> of a simplified harvest report.</p>
-<p>Title: <input type="text" id="comment" name="comment" size="21" value="My Sample Harvest Report" /></p>
+<p>Title: <input type="text" id="comment" name="comment" size="21" value="My Sample Harvest Report" /></p><br />
+
+<label for="start">Start:</label>
+<input type="date" id="start" name="start date" value="2018-05-01" min="2014-01-01" max="2022-01-01" />
+<label for="end">End:</label>
+<input type="date" id="start" name="end date" value="2018-05-01" min="2014-01-01" max="2022-01-01" /><br />
+<br />
+<label for="crop choice">Crop:</label>
+<select name="crops" id="crop choices">
+  <option value="kale" selected>Kale</option>
+  <option value="broccoli">Broccoli</option>
+  <option value="peas">Peas</option>
+</select>
+<label for="field choice">Area:</label>
+<select name="field" id="field choices">
+  <option value="all" selected>All</option>
+  <option value="chuau-1">Chuau-1</option>
+  <option value="sq7">SQ7</option>
+</select> <br />
+<br />
+
 <button type="button">Generate Report</button>
 <hr />
 <h1>My Sample Harvest Report</h1>
