Table modified to only display when there is data

--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -60,7 +60,8 @@
       <li><b>Crop:</b> Kale</li>
     </ul>
     </div>
-    <table> 
+    <h3 v-if="tableData.length === 0"> No records to display </h3>
+    <table v-if="tableData.length != 0"> 
       <tr> 
         <th>Row</th>
         <th>Date</th> 
