--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -28,7 +28,7 @@
             </select>
             <br>
             <br>
-            <input type="button" value="Generate Report" v-on:click='reportLogs.push({date:"2018-05-01", area:"Orion-3", crop:"Kale", yield:"12",units:"Bunches"})'/>
+            <input type="button" value="Generate Report" v-on:click="generateReport"/>
             <hr>
             <h1>{{reportTitle==""?"Mock Harvest Report":reportTitle}}</h1> 
             <p>Details:</p>
@@ -70,6 +70,11 @@
                 areas:["All","Chuau-1","SQ7"],
                 newLog:{},
                 reportLogs:[],
+            },
+            methods: {
+                generateReport: function(){
+                    this.reportLogs.push({date:"2018-05-01", area:"Orion-3", crop:"Kale", yield:"12",units:"Bunches"})
+                }
             }
 
         });
