--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -43,13 +43,15 @@
             </ul>
             <table border="1">
                 <tr>
+                    <th>Row</th>
                     <th>Date</th>
                     <th>Area</th>
                     <th>Crop</th>
                     <th>Yield</th>
                     <th>Units</th>
                 </tr>
-                <tr v-for="log in reportLogs">
+                <tr v-for="(log,index) in reportLogs">
+                    <td>{{index+1}}</td>
                     <td >{{log.date}}</td>
                     <td>{{log.area}}</td>
                     <td>{{log.crop}}</td>
@@ -68,12 +70,11 @@
                 reportCrop: "Kale",
                 crops:["Kale","Broccoli","Peas"],
                 areas:["All","Chuau-1","SQ7"],
-                newLog:{},
                 reportLogs:[],
             },
             methods: {
                 generateReport: function(){
-                    this.reportLogs.push({date:"2018-05-01", area:"Orion-3", crop:"Kale", yield:"12",units:"Bunches"})
+                    this.reportLogs.push({ date:"2018-05-01", area:"Orion-3", crop:"Kale", yield:"12",units:"Bunches"})
                 }
             }
 
