--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -12,10 +12,10 @@
             <br>
             <label for="start">Start:</label>
             <input type="date" id="start" name="start"  
-            min="2014-01-01" max="2022-01-01" value="2020-05-05" v-model="reportStartDate"/>
+            min="2014-01-01"  value="2020-05-05" v-bind:max="reportEndDate" v-model="reportStartDate"/>
             <label for="send">End:</label>
             <input type="date" id="end" name="end" 
-            min="2020-05-05" max="2022-01-01" value="2020-05-15" v-model="reportEndDate"/>
+             max="2022-01-01" value="2020-05-15" v-bind:min="reportStartDate" v-model="reportEndDate"/>
             <br>
             <br>
             <label for=”crops”>Crop:</label>
