--- a/farmdata2/farmdata2_modules/fd2_school/Vue2/Vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue2/Vue2.html
@@ -15,7 +15,7 @@
                     <option v-for="area in areas" :value="area">{{ area }}</option>
                 </select>
                 <h1 v-cloak>Harvest Report</h1>
-          <table>
+          <table border="1">
             <thead>
               <tr>
                 <th>Date</th>
@@ -35,6 +35,7 @@
               </tr>
             </tbody>
           </table>
+          <button class="btn btn-primary" @click="generateReport">Generate Report</button>
             </div>
             <script src="https://unpkg.com/vue@2"></script>
             <script>
@@ -45,26 +46,41 @@
                      startDate:"2020-05-05",
                      endDate: "2020-05-15",
                      selectedCrop: "kale",
-                     crops: ["brocili", "kale", "peas"],
+                     crops: ["broccili", "kale", "peas"],
                      areas: ["all", "chuahu-1", "sq7"],
+                     harvestLogs: [],
+                     reportGenerated: false,
                  },
-                 harvestLogs: [],
+                 methods: {
+                    generateReport: function() {
+                        if(!this.reportGenerated){
+                            this.harvestLogs.push({
+                            date: "2018-05-01",
+                            area: "Orion-3",
+                            crop: "Kale",
+                            yield: "12",
+                            units: "Bunches",
+                        });
+                        this.reportGenerated = true;
+                        }   
+                    }
+                 }
                 })
                 Vue.config.devtools = true;
             </script>
-            <title>Title Field Example</title>
+            <!-- <title>Title Field Example</title>
             <h1>Harvest Report</h1>
             <p>This page is a <em>mockup</em> of a simplified harvest report</p>
             <label for="start">Start Date:</label>
                 <input type="date" id="start" name="start-date" v-model="startDate" min="2014-01-01" max="2022-01-01"/>
             <label for="end">End Date:</label>
                 <input type="date" id="end" name="end-date" v-model="endDate" value="20202-05-15" min="2020-05-05" max="2022-01-01"/><br>
-            <hr />
+            <hr /> -->
             <h1>My Sample Harvest:</h1>
             <p>Details:</p>
                 <label for="title">Title:</label>
                 <input type="text" id="title" name="title" placeholder="Enter the title">
-                <button class="btn btn-primary" @click="harvestLogs.push({date:'2018-05-01', area: 'Orion-3', crop: 'Kale', yield: '12', units: 'Bunches'})">Generate Report</button>
+                <button class="btn btn-primary" @click="generateReport">Generate Report</button>
                 <table border=1>
                     <tr>
                         <th>Date</th>
@@ -73,21 +89,7 @@
                         <th>Field</th>
                         <th>Units</th>
                     </tr>
-                    <tr>
-                        <td>05/02/2018</td>
-                        <td>05/05/2018</td> 
-                        <td>Kale</td>
-                        <td>10</td>
-                        <td>Bunches</td>
-                    </tr>
-                    <tr>
-                        <td>Chuau-1</td>
-                        <td>SQ7</td> 
-                        <td>Kale</td>
-                        <td>7</td>
-                        <td>Bunches</td>
-                    </tr>
-                </table>
+                </table> 
             </body>
     </header>
 </html>
