--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -53,13 +53,15 @@
         </ul>
         <table border=1>
             <tr>
+                <th>Row</th>
                 <th>Date</th>
                 <th>Area</th>
                 <th>Crop</th>
                 <th>Yield</th>
                 <th>Units</th>
             </tr>
-            <tr v-for="t in harvestLogs">
+            <tr v-for="(t,index) in harvestLogs">
+                <td>{{index+1}}</td>
                 <td>{{t.date}}</td>
                 <td>{{t.area}}</td>
                 <td>{{t.crop}}</td>
