--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -59,6 +59,7 @@
                 <th>Crop</th>
                 <th>Yield</th>
                 <th>Units</th>
+                <th>Delete</th>
             </tr>
             <tr v-for="(t,index) in harvestLogs">
                 <td>{{index+1}}</td>
@@ -67,6 +68,7 @@
                 <td>{{t.crop}}</td>
                 <td>{{t.yield}}</td>
                 <td>{{t.units}}</td>
+                <td><button type="button" @click="deleteLog">Delete</button></td>
             </tr>
         </table>
       </div>
@@ -102,8 +104,9 @@
                 } else if (this.harvestLogs.length==2) {
                     this.harvestLogs.push({date: "2018-05-01", area: "Orion-3", crop: "cucumber", yield: 9, units: "Bunches"});
                 } 
-
-            }
+            },
+                deleteLog: function(Index) { 
+                    this.harvestLogs.splice(Index, 1); } 
             }
         });
         Vue.config.devtools = true; 
