--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -51,7 +51,7 @@
             <li><strong>End:</strong>{{reportEndDate}}</li>
             <li><strong>Crop:</strong>{{reportCrop}}</li>
         </ul>
-        <table border=1>
+        <table v-if="harvestLogs.length>0" border=1>
             <tr>
                 <th>Row</th>
                 <th>Date</th>
@@ -71,6 +71,7 @@
                 <td><button type="button" @click="deleteLog">Delete</button></td>
             </tr>
         </table>
+        <p v-else>No matching records</p>
       </div>
       <script>
         var vueData = new Vue({
