--- a/farmdata2/farmdata2_modules/fd2_school/Vue2/Vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue2/Vue2.html
@@ -1,97 +1,84 @@
+<!DOCTYPE html>
 <html>
-    <header>
-        <title>Anonymous Button Example</title>
-        <body>
-            <div id="test">
-                <input type="text" v-model="reportTitle" placeholder="Enter report title">
-                <h1 v-cloak>{{ reportTitle ? reportTitle : "Mock Harvest Report" }}</h1>
+  <head>
+    <title>Anonymous Button Example</title>
+    <style>
+      [v-cloak] {
+        display: none;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="test">
+      <input type="text" v-model="reportTitle" placeholder="Enter report title">
+      <h1 v-cloak>{{ reportTitle ? reportTitle : "Mock Harvest Report" }}</h1>
 
-                <label for="crops">Crop:</label>
-                <select name="crops" id="crops" v-model="selectedCrop">
-                    <option v-for="crop in crops" :value="crop">{{ crop }}</option>
-                </select>
-                <label for="area">Area:</label>
-                <select name="area" id="area">
-                    <option v-for="area in areas" :value="area">{{ area }}</option>
-                </select>
-                <h1 v-cloak>Harvest Report</h1>
-          <table border="1">
-            <thead>
-              <tr>
-                <th>#</th>
-                <th>Date</th>
-                <th>Area</th>
-                <th>Crop</th>
-                <th>Yield</th>
-                <th>Units</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr v-for="(log, index) in harvestLogs"> <!--added new for harvestLogs-->
-                <td>{{ index + 1 }}</td>
-                <td>{{ log.date }}</td>
-                <td>{{ log.area }}</td>
-                <td>{{ log.crop }}</td>
-                <td>{{ log.yield }}</td>
-                <td>{{ log.units }}</td>
-              </tr>
-            </tbody>
-          </table>
-          <button class="btn btn-primary" @click="generateReport">Generate Report</button>
-            </div>
-            <script src="https://unpkg.com/vue@2"></script>
-            <script>
-                var test = new Vue({
-                    el: "#test",
-                    data: {
-                     reportTitle:"" ,
-                     startDate:"2020-05-05",
-                     endDate: "2020-05-15",
-                     selectedCrop: "kale",
-                     crops: ["broccili", "kale", "peas"],
-                     areas: ["all", "chuahu-1", "sq7"],
-                     harvestLogs: [],
-                     reportGenerated: false,
-                 },
-                 methods: {
-                    generateReport: function() {
-                        if(!this.reportGenerated){
-                            this.harvestLogs.push({
-                            date: "2018-05-01",
-                            area: "Orion-3",
-                            crop: "Kale",
-                            yield: "12",
-                            units: "Bunches",
-                        });
-                        this.reportGenerated = true;
-                        }   
-                    }
-                 }
-                })
-                Vue.config.devtools = true;
-            </script>
-            <!-- <title>Title Field Example</title>
-            <h1>Harvest Report</h1>
-            <p>This page is a <em>mockup</em> of a simplified harvest report</p>
-            <label for="start">Start Date:</label>
-                <input type="date" id="start" name="start-date" v-model="startDate" min="2014-01-01" max="2022-01-01"/>
-            <label for="end">End Date:</label>
-                <input type="date" id="end" name="end-date" v-model="endDate" value="20202-05-15" min="2020-05-05" max="2022-01-01"/><br>
-            <hr /> -->
-            <h1>My Sample Harvest:</h1>
-            <p>Details:</p>
-                <label for="title">Title:</label>
-                <input type="text" id="title" name="title" placeholder="Enter the title">
-                <button class="btn btn-primary" @click="generateReport">Generate Report</button>
-                <table border=1>
-                    <tr>
-                        <th>Date</th>
-                        <th>Area</th> 
-                        <th>Crop</th>
-                        <th>Field</th>
-                        <th>Units</th>
-                    </tr>
-                </table> 
-            </body>
-    </header>
+      <label for="crops">Crop:</label>
+      <select name="crops" id="crops" v-model="selectedCrop">
+        <option v-for="crop in crops" :value="crop">{{ crop }}</option>
+      </select>
+      <label for="area">Area:</label>
+      <select name="area" id="area">
+        <option v-for="area in areas" :value="area">{{ area }}</option>
+      </select>
+      <h1 v-cloak>Harvest Report</h1>
+      <table border="1">
+        <thead v-if="harvestLogs.length > 0">
+          <tr>
+            <th>#</th>
+            <th>Date</th>
+            <th>Area</th>
+            <th>Crop</th>
+            <th>Yield</th>
+            <th>Units</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr v-if="harvestLogs.length === 0">
+            <td>No matching records.</td>
+          </tr>
+          <tr v-for="(log, index) in harvestLogs">
+            <td>{{ index + 1 }}</td>
+            <td>{{ log.date }}</td>
+            <td>{{ log.area }}</td>
+            <td>{{ log.crop }}</td>
+            <td>{{ log.yield }}</td>
+            <td>{{ log.units }}</td>
+          </tr>
+        </tbody>
+    </table>
+    <button class="btn btn-primary" @click="generateReport">Generate Report</button>
+  </div>
+  <script src="https://unpkg.com/vue@2"></script>
+  <script>
+    var test = new Vue({
+      el: "#test",
+      data: {
+        reportTitle: "",
+        startDate: "2020-05-05",
+        endDate: "2020-05-15",
+        selectedCrop: "kale",
+        crops: ["broccili", "kale", "peas"],
+        areas: ["all", "chuahu-1", "sq7"],
+        harvestLogs: [],
+        reportGenerated: false,
+      },
+      methods: {
+        generateReport: function () {
+          if (!this.reportGenerated) {
+            this.harvestLogs.push({
+              date: "2018-05-01",
+              area: "Orion-3",
+              crop: "Kale",
+                yield: "12",
+                units: "Bunches",
+              });
+              this.reportGenerated = true;
+            }
+          },
+        },
+      });
+      Vue.config.devtools = true;
+    </script>
+  </body>
 </html>
