implement if statement such that if the title field is empty print Mock Harvest Report

--- a/farmdata2/farmdata2_modules/fd2_school/Vue1/Vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue1/Vue1.html
@@ -3,7 +3,7 @@
         <hr>
         <body> 
             <div id="report" v-cloak> 
-            <h1>{{header}}</h1>
+            <h1>{{(header!="") ? header : "Mock Harvest Report"}}</h1>
             <p>
                 This page is a <i>mockup</i> of a simplified harvest report.
                 <ul>
@@ -39,7 +39,7 @@
             <hr>
 
         
-                <h1>{{header}}</h1>  
+                <h1>{{(header!="") ? header : "Mock Harvest Report"}}</h1>  
             
             <p>
                 Detail:
