--- a/farmdata2/farmdata2_modules/fd2_school/Vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue2/vue2.html
@@ -1,6 +1,6 @@
 <html>
 
-<div id="vue_spike1" v-cloak>
+<div id="vue_spike2" v-cloak>
     <body>
         <p>
         <h1>Harvest Report</h1>
@@ -37,7 +37,7 @@
 
         <br>
 
-        <button type="button">Generate Report</button>
+        <button type="button" v-on:click='harvestLogs.push({date:"2018-05-01", area:"Orion-3", crop:"Kale", yield:12, units:"Bunches"})'>Generate Report</button>
 
         <hr>
 
@@ -70,7 +70,7 @@
                   <th>Yield</th>
                   <th>Units</th>
                 </tr>
-               <tr v-for="cell in cells"> 
+               <tr v-for="cell in harvestLogs"> 
                 <td>{{ cell.date }}</td> 
                 <td>{{ cell.area }}</td> 
                 <td>{{ cell.crop }}</td> 
@@ -86,17 +86,16 @@
 
 <script>
     var vueSpike = new Vue({
-      el: "#vue_spike1",
+      el: "#vue_spike2",
       data: {
           title: "My Sample Harvest Report",
           startDate: "2020-05-05",
           endDate: "2020-05-15",
           crops: ["Kale", "Peas", "Broccoli"],
           areas: ["All", "Chuau-1", "SQ7"],
-          cells: [
-            {date: "2018-05-02", area: "Chuau-1", crop: "Kale", yield: 10, units: "Bunches"},
-            {date: "2018-05-05", area: "SQ7", crop: "Kale", yield: 7, units: "Bunches"}
-        ]
+          harvestLogs: [
+        ],
+   
       }
     })
     Vue.config.devtools = true
