--- a/farmdata2/farmdata2_modules/fd2_school/Vue2/Vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue2/Vue2.html
@@ -2,11 +2,6 @@
 <html>
   <head>
     <title>Anonymous Button Example</title>
-    <style>
-      [v-cloak] {
-        display: none;
-      }
-    </style>
   </head>
   <body>
     <div id="test">
@@ -22,10 +17,9 @@
         <option v-for="area in areas" :value="area">{{ area }}</option>
       </select>
       <h1 v-cloak>Harvest Report</h1>
-      <table border="1">
-        <thead v-if="harvestLogs.length > 0">
+      <table>
+        <thead>
           <tr>
-            <th>#</th>
             <th>Date</th>
             <th>Area</th>
             <th>Crop</th>
@@ -34,11 +28,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr v-if="harvestLogs.length === 0">
-            <td>No matching records.</td>
-          </tr>
-          <tr v-for="(log, index) in harvestLogs">
-            <td>{{ index + 1 }}</td>
+          <tr v-for="log in harvestLogs">
             <td>{{ log.date }}</td>
             <td>{{ log.area }}</td>
             <td>{{ log.crop }}</td>
@@ -46,39 +36,57 @@
             <td>{{ log.units }}</td>
           </tr>
         </tbody>
-    </table>
-    <button class="btn btn-primary" @click="generateReport">Generate Report</button>
-  </div>
-  <script src="https://unpkg.com/vue@2"></script>
-  <script>
-    var test = new Vue({
-      el: "#test",
-      data: {
-        reportTitle: "",
-        startDate: "2020-05-05",
-        endDate: "2020-05-15",
-        selectedCrop: "kale",
-        crops: ["broccili", "kale", "peas"],
-        areas: ["all", "chuahu-1", "sq7"],
-        harvestLogs: [],
-        reportGenerated: false,
-      },
-      methods: {
-        generateReport: function () {
-          if (!this.reportGenerated) {
+      </table>
+    </div>
+    <script src="https://unpkg.com/vue@2"></script>
+    <script>
+      var test = new Vue({
+        el: "#test",
+        data: {
+          reportTitle: "",
+          startDate: "2020-05-05",
+          endDate: "2020-05-15",
+          selectedCrop: "kale",
+          crops: ["broccoli", "kale", "peas"],
+          areas: ["all", "chuahu-1", "sq7"],
+          harvestLogs: [],
+        },
+        methods: {
+          generateReport: function () {
+            
             this.harvestLogs.push({
               date: "2018-05-01",
               area: "Orion-3",
               crop: "Kale",
-                yield: "12",
-                units: "Bunches",
-              });
-              this.reportGenerated = true;
-            }
+              yield: "12",
+              units: "Bunches",
+            });
           },
         },
       });
       Vue.config.devtools = true;
     </script>
+    <title>Title Field Example</title>
+    <h1>Harvest Report</h1>
+    <p>This page is a <em>mockup</em> of a simplified harvest report</p>
+    <label for="start">Start Date:</label>
+    <input type="date" id="start" name="start-date" v-model="startDate" min="2014-01-01" max="2022-01-01" />
+    <label for="end">End Date:</label>
+    <input type="date" id="end" name="end-date" v-model="endDate" value="20202-05-15" min="2020-05-05" max="2022-01-01" /><br />
+    <hr />
+    <h1>My Sample Harvest:</h1>
+    <p>Details:</p>
+    <label for="title">Title:</label>
+    <input type="text" id="title" name="title" placeholder="Enter the title" />
+    <button class="btn btn-primary" @click="generateReport">Generate Report</button>
+    <table border="1">
+      <tr>
+        <th>Date</th>
+        <th>Area</th>
+        <th>Crop</th>
+        <th>Field</th>
+        <th>Units</th>
+      </tr>
+    </table>
   </body>
 </html>
