--- a/farmdata2/farmdata2_modules/fd2_school/Vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue2/vue2.html
@@ -95,13 +95,15 @@
             
                 <table>
                     <tr>
+                        <th>Row</th>
                         <th>Date</th>
                         <th>Area</th>
                         <th>Crop</th>
                         <th>Yield</th>
                         <th>Units</th>
                     </tr>
-                    <tr v-for="t in table">
+                    <tr v-for="(t,index) in table">
+                        <td>{{ t.index }}</td>
                         <td>{{ t.date }}</td>
                         <td>{{ t.area }}</td>
                         <td>{{ t.crop }}</td>
@@ -132,15 +134,16 @@
                                 'Chuau-1'
                             ],
                             newData: '',
+                            rowNumber:1,
                             table: [
-                                {date: "2018-05-02", area: "Chuau-1", crop: "Kale", yield: 10, units: "Bunches"},
-                                {date: "2018-05-10", area: "SQ7", crop: "Broccoli", yield: 5, units: "Bunches"}
+                                
                             ]
                         },
                         methods: {
                             saveReport: function() {
-                            this.table.push({date:"2018-0501", area: "Orion-3", crop: "Kale",yield:"12",units: "Bunches"});      
-                        },
+                                this.table.push({index: this.rowNumber,date:"2018-05-01", area: "Orion-3", crop: "Kale",yield:"12",units: "Bunches"}),     
+                                this.rowNumber=this.rowNumber+1;
+                            },
                     }
                     });
                     Vue.config.devtools = true;
