table displays "nothing to display" when their is no data in the table

--- a/farmdata2/farmdata2_modules/fd2_school/Vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue2/vue2.html
@@ -93,7 +93,9 @@
                 </style>
             </head>
             
-                <table>
+                <h3 v-if="table.length === 0"> Nothing to display </h3>
+                <table v-if="table.length != 0"> 
+                    
                     <tr>
                         <th>Row</th>
                         <th>Date</th>
