--- a/farmdata2/farmdata2_modules/fd2_school/Vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue2/vue2.html
@@ -64,13 +64,15 @@
         <div>
             <table border=1>
                 <tr>
+                  <th>Row</th>
                   <th>Date</th>
                   <th>Area</th>
                   <th>Crop</th>
                   <th>Yield</th>
                   <th>Units</th>
                 </tr>
-               <tr v-for="cell in harvestLogs"> 
+               <tr v-for="(cell,index) in harvestLogs"> 
+                <td>{{ index + 1 }}</td> 
                 <td>{{ cell.date }}</td> 
                 <td>{{ cell.area }}</td> 
                 <td>{{ cell.crop }}</td> 
@@ -98,8 +100,7 @@
       },
       methods: {
             saveReport: function(){
-                this.harvestLogs.push(this.harvestLogs.push({date:"2018-05-01", area:"Orion-3", crop:"Kale", yield:12, units:"Bunches"}));
-                
+                this.harvestLogs.push({date:"2018-05-01", area:"Orion-3", crop:"Kale", yield:12, units:"Bunches"});
             }
 
         }
