--- a/farmdata2/farmdata2_modules/fd2_school/Vue1/Vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue1/Vue1.html
@@ -13,21 +13,20 @@
      <br>
      
      <div>
-     <label for="start">Start:</label>
-     <input type="date" id="start" name="start" 
-     value="2020-05-05" min="2014-01-01" max="2022-01-01" />
+     <label for="startdate">Start:</label>
+     <input type="date" id="startdate" name="start_date"
+            v-model ="startDate" min="2014-01-01" max="2022-01-01" />
 
-     <label for="end">End:</label>
-     <input type="date" id="end" name="end" 
-     value="2020-05-05" min="2020-05-05" max="2022-01-01" />
+     
+     <label for="endDate">End:</label>
+        <input type="date" id="endDate" name="end_date"
+            v-model ="endDate"  min="2020-05-05" max="2022-01-01" />
      </div>
      <br>
      <br>
-     <label for="crop">Crop:</label>
-     <select id="crop" name="crop">
-          <option>Broccoli</option>
-          <option selected>Kale</option>
-          <option>Peas</option>
+     <label for="crops">Crop:</label>
+        <select v-model="crops" id="crops" name="crops">
+            <option v-for="crops in crops">{{ crops }}</option>
         </select>
      <label for="area">Area:</label>
      <select id="area" name="area">
@@ -84,7 +83,10 @@
      var vueSpike = new Vue({
        el: "#vue_spike1",
        data: {
-           title: "My Sample Harvest Report",
+          title: "My Sample Harvest Report",
+          startDate: "2020-05-05",
+          endDate: "2020-05-15",
+          crops: ["Kale", "Peas", "Broccoli"],
        }
      })
      Vue.config.devtools = true
