Added Mock Harvest Report

--- a/farmdata2/farmdata2_modules/fd2_school/Vue1/Vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue1/Vue1.html
@@ -40,7 +40,7 @@
      
      <hr>
 
-     <v-cloak><h1>{{ title ? title : "My Sample Harvest Report" }}</h1></v-cloak>
+     <v-cloak><h1>{{ title ? title : "Mock Harvest Report" }}</h1></v-cloak>
      <p>Details:</p>
      <ul> 
           <li><b>Farm</b>:Sample Farm</li>
