Added conditional rendering to harvest log table

--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -44,7 +44,8 @@
                     </ul>
                 </p>
                 <br>
-                <table border="1">
+                <p v-if="harvestLogs.length === 0">No Harvest Report Records to Display</p>
+                <table border="1" v-if="harvestLogs.length > 0">
                     <tr>
                         <th><strong>Row</strong></th>
                         <th><strong>Date</strong></th>
