--- a/farmdata2/farmdata2_modules/fd2_school/Vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue2/vue2.html
@@ -15,10 +15,10 @@
         <div>
         <label for="startdate">Start:</label>
         <input type="date" id="startdate" name="start_date" 
-            v-model ="startDate" min="2014-01-01" max="2022-01-01" />
+            v-model ="startDate" min="2014-01-01" :max="endDate"/>
         <label for="enddate">End:</label>
-        <input type="date" id="startdate" name="start_date" 
-            v-model ="endDate"  min="2020-05-05" max="2022-01-01" />
+        <input type="date" id="enddate" name="end_date" 
+            v-model ="endDate"  :min="startDate" max="2022-01-01"/>
         </div>
 
         <br>
