added column on left of harvest report called Row containing the index of each row starting with 1

--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -51,7 +51,7 @@
                 <th>Units</th>
             </tr>
 
-            <tr v-for="(logs, index) in reportHarvestLogs"> <td>{{index}}</td><td v-for="item in logs">{{item}}</td></tr>
+            <tr v-for="(logs, index) in reportHarvestLogs"> <td>{{index + 1}}</td><td v-for="item in logs">{{item}}</td></tr>
         </table>
               
     </div>
